Implementaion de endpoints
